added folder includes initial page loading transition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
+
     
     <div class="front-view">
       <div class="header-footer">
@@ -87,7 +89,7 @@
       </div>
     </div>
 
-
+    </div>
 
 
 
