made the font responsive with variable height of scree

--- a/front-view/index.html
+++ b/front-view/index.html
@@ -14,7 +14,7 @@
             <div class="string">
             <span class="change a">landing page</span>
             <span class="change b">portfolio</span>
-            <span class="change c">blog's</span>
+            <span class="change c">blogs</span>
             <span class="change c">product design</span>
             <span class="change d">dashboard</span>
             <span class="change e">mobile app</span>
