added experiment folder for grid entry animation

--- a/front-view/index.html
+++ b/front-view/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First-view</title>
-    <link rel="stylesheet" href="index.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-            <div class="vector"></div>
-            <div class="string">
-            <span class="change a">landing page</span>
-            <span class="change b">portfolio</span>
-            <span class="change c">blogs</span>
-            <span class="change c">product design</span>
-            <span class="change d">dashboard</span>
-            <span class="change e">mobile app</span>
-            <span class="change f">e-commerce</span> 
-            </div>
-            <span class="closure"></span>
-    <script type="text/javascript" src="index.js"></script>
+    <div class="vector"></div>
+    <div class="string">
+        <span class="change a">landing page</span>
+        <span class="change b">portfolio</span>
+        <span class="change c">blogs</span>
+        <span class="change c">product design</span>
+        <span class="change d">dashboard</span>
+        <span class="change e">mobile app</span>
+        <span class="change f">e-commerce</span>
+    </div>
+    <span class="closure"></span>
+ 
+   <script type="text/javascript" src="index.js"></script>
 
 </body>
+
 </html>
